k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: food-scheduler
  labels:
    app: food-scheduler
